Fixed padding issue in menu button on mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -28,6 +28,7 @@ button {
   color: #FFF;
   text-align: center;
   font-size: 150%;
+  padding: 0px;
 }
 
     button:hover {
